<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACB6A7"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="105dp">

    <TextView
        android:id="@+id/textViewBienvenu"
        android:layout_width="191dp"
        android:layout_height="71dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="200dp"
        android:background="#818D7E"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextViewMessageBienvenu"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNotes"
        android:layout_width="213dp"
        android:layout_height="94dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#818D7E"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonMesNotes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInfos" />

    <Button
        android:id="@+id/buttonInfos"
        android:layout_width="213dp"
        android:layout_height="94dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#818D7E"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonMesInfos"
        android:textColorHighlight="#D51212"
        android:textColorLink="#FF0000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBienvenu" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="145dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fsi_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>