<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACB6A7">

    <Button
        android:id="@+id/buttonRetour4"
        android:layout_width="142dp"
        android:layout_height="77dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#818D7E"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonRetour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fsi_logo" />

    <TextView
        android:id="@+id/textViewBilan2"
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:background="#818D7E"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/TextViewMessageBilan1"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="283dp"
        android:layout_height="301dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="118dp"
        android:background="#818D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBilan2">

        <TextView
            android:id="@+id/textViewSujMem7"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="212dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageDossier1"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNoteD1DB"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="212dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNoteO1"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="168dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageOral1"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextViewNoteO1DB"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="168dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDB1BD"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewnNoteEts"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="128dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageEntreprise"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNoteEtsDB"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="128dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDB1"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageDateBilan1"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="234dp"
        android:layout_height="75dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:background="#818D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textViewRQ2DB"
            android:layout_width="126dp"
            android:layout_height="20dp"
            android:layout_marginStart="54dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRQ1" />

        <TextView
            android:id="@+id/textViewRQ1"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageRemarqueBilan2"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>