<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACB6A7">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="145dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fsi_logo" />

    <TextView
        android:id="@+id/textViewBilan2"
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:background="#818D7E"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/TextViewMessageBilan2"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="176dp"
        android:layout_height="88dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="118dp"
        android:background="#818D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBilan2">

        <TextView
            android:id="@+id/TextViewSujMem"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageSujetMemoire"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSMDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewSujMem" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="274dp"
        android:layout_height="223dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="95dp"
        android:background="#818D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textViewDateB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/TextViewMessageDateBilan2"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNoteO2DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/textViewNoteD2"
            app:layout_constraintStart_toEndOf="@+id/TextViewNoteO2" />

        <TextView
            android:id="@+id/textViewNoteD2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginBottom="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/TextViewMessageDossier2"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TextViewNoteO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/TextViewMessageOral2"
            android:textColor="@color/text"
            app:layout_constraintBottom_toTopOf="@+id/textViewNoteD2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDB2DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateB2" />

        <TextView
            android:id="@+id/textViewNoteD2DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="45dp"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewNoteD2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonRetour3"
        android:layout_width="142dp"
        android:layout_height="77dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#818D7E"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonRetour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="234dp"
        android:layout_height="75dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="87dp"
        android:background="#818D7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textViewRQ1DB"
            android:layout_width="126dp"
            android:layout_height="20dp"
            android:layout_marginStart="54dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRQ1" />

        <TextView
            android:id="@+id/textViewRQ1"
            android:layout_width="106dp"
            android:layout_height="23dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/TextViewMessageRemarqueBilan2"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>